[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/Worlds/WorldLevels.gd" type="Script" id=1]
[ext_resource path="res://Assets/Worlds/roundlocked.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Luis Candara.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Worlds/3 stars.png" type="Texture" id=4]
[ext_resource path="res://Assets/Worlds/records.png" type="Texture" id=5]
[ext_resource path="res://Assets/Worlds/home.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 73.2607

[sub_resource type="DynamicFont" id=2]
size = 1000
font_data = ExtResource( 3 )

[sub_resource type="CircleShape2D" id=3]
radius = 72.6933

[sub_resource type="CircleShape2D" id=4]
radius = 70.9999

[sub_resource type="CircleShape2D" id=5]
radius = 72.7458

[sub_resource type="CircleShape2D" id=6]
radius = 72.3379

[sub_resource type="CircleShape2D" id=7]
radius = 71.0422

[sub_resource type="CircleShape2D" id=8]
radius = 72.4112

[sub_resource type="CircleShape2D" id=9]
radius = 73.0518

[sub_resource type="CircleShape2D" id=10]
radius = 72.9379

[sub_resource type="CircleShape2D" id=11]
radius = 61.6571

[sub_resource type="CircleShape2D" id=12]
radius = 60.9089

[node name="LevelSelection" type="Node2D"]
script = ExtResource( 1 )

[node name="Levels" type="Node2D" parent="."]
position = Vector2( 0, 33.3074 )
__meta__ = {
"_edit_group_": true
}

[node name="Level1" type="Area2D" parent="Levels"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Levels/Level1"]
position = Vector2( 128, 321 )
shape = SubResource( 1 )

[node name="Level1" type="Sprite" parent="Levels/Level1"]
editor/display_folded = true
position = Vector2( 128.432, 321.16 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Level" type="Label" parent="Levels/Level1/Level1"]
margin_left = -82.0095
margin_top = -617.99
margin_right = 85.9905
margin_bottom = 382.01
custom_fonts/font = SubResource( 2 )
text = "1"

[node name="Stars" type="Sprite" parent="Levels/Level1/Level1"]
visible = false
position = Vector2( 1.47385, 402.737 )
scale = Vector2( 1.41988, 1.60734 )
texture = ExtResource( 4 )

[node name="Level2" type="Area2D" parent="Levels"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Levels/Level2"]
position = Vector2( 293, 322 )
shape = SubResource( 3 )

[node name="Level2" type="Sprite" parent="Levels/Level2"]
editor/display_folded = true
position = Vector2( 293.78, 322.83 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Level" type="Label" parent="Levels/Level2/Level2"]
margin_left = -82.0095
margin_top = -617.99
margin_right = 85.9905
margin_bottom = 382.01
custom_fonts/font = SubResource( 2 )
text = "2"

[node name="Stars" type="Sprite" parent="Levels/Level2/Level2"]
visible = false
position = Vector2( 1.47385, 402.737 )
scale = Vector2( 1.41988, 1.60734 )
texture = ExtResource( 4 )

[node name="Level3" type="Area2D" parent="Levels"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Levels/Level3"]
position = Vector2( 460, 324 )
shape = SubResource( 4 )

[node name="Level3" type="Sprite" parent="Levels/Level3"]
editor/display_folded = true
position = Vector2( 460.798, 324.501 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Level" type="Label" parent="Levels/Level3/Level3"]
margin_left = -82.0095
margin_top = -617.99
margin_right = 85.9905
margin_bottom = 382.01
custom_fonts/font = SubResource( 2 )
text = "3"

[node name="Stars" type="Sprite" parent="Levels/Level3/Level3"]
visible = false
position = Vector2( 1.47385, 402.737 )
scale = Vector2( 1.41988, 1.60734 )
texture = ExtResource( 4 )

[node name="Level4" type="Area2D" parent="Levels"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Levels/Level4"]
position = Vector2( 130, 528 )
shape = SubResource( 5 )

[node name="Level4" type="Sprite" parent="Levels/Level4"]
editor/display_folded = true
position = Vector2( 130.102, 528.263 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Level" type="Label" parent="Levels/Level4/Level4"]
margin_left = -82.0095
margin_top = -617.99
margin_right = 85.9905
margin_bottom = 382.01
custom_fonts/font = SubResource( 2 )
text = "4"

[node name="Stars" type="Sprite" parent="Levels/Level4/Level4"]
visible = false
position = Vector2( 1.47385, 402.737 )
scale = Vector2( 1.41988, 1.60734 )
texture = ExtResource( 4 )

[node name="Level5" type="Area2D" parent="Levels"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Levels/Level5"]
position = Vector2( 290, 530 )
shape = SubResource( 6 )

[node name="Level5" type="Sprite" parent="Levels/Level5"]
editor/display_folded = true
position = Vector2( 290, 530 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Level" type="Label" parent="Levels/Level5/Level5"]
margin_left = -82.0095
margin_top = -617.99
margin_right = 85.9905
margin_bottom = 382.01
custom_fonts/font = SubResource( 2 )
text = "5"

[node name="Stars" type="Sprite" parent="Levels/Level5/Level5"]
visible = false
position = Vector2( 1.47385, 402.737 )
scale = Vector2( 1.41988, 1.60734 )
texture = ExtResource( 4 )

[node name="Level6" type="Area2D" parent="Levels"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Levels/Level6"]
position = Vector2( 460, 530 )
shape = SubResource( 7 )

[node name="Level6" type="Sprite" parent="Levels/Level6"]
editor/display_folded = true
position = Vector2( 460, 530 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Level" type="Label" parent="Levels/Level6/Level6"]
margin_left = -146.781
margin_top = -580.978
margin_right = 114.219
margin_bottom = 419.022
custom_fonts/font = SubResource( 2 )
text = "6"

[node name="Stars" type="Sprite" parent="Levels/Level6/Level6"]
visible = false
position = Vector2( 1.47385, 402.737 )
scale = Vector2( 1.41988, 1.60734 )
texture = ExtResource( 4 )

[node name="Level7" type="Area2D" parent="Levels"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Levels/Level7"]
position = Vector2( 133, 731 )
shape = SubResource( 8 )

[node name="Level7" type="Sprite" parent="Levels/Level7"]
editor/display_folded = true
position = Vector2( 133, 731.075 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Level" type="Label" parent="Levels/Level7/Level7"]
margin_left = -82.0095
margin_top = -617.99
margin_right = 85.9905
margin_bottom = 382.01
custom_fonts/font = SubResource( 2 )
text = "7"

[node name="Stars" type="Sprite" parent="Levels/Level7/Level7"]
visible = false
position = Vector2( 1.47385, 402.737 )
scale = Vector2( 1.41988, 1.60734 )
texture = ExtResource( 4 )

[node name="Level8" type="Area2D" parent="Levels"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Levels/Level8"]
position = Vector2( 300, 736 )
shape = SubResource( 9 )

[node name="Level8" type="Sprite" parent="Levels/Level8"]
editor/display_folded = true
position = Vector2( 300.914, 736.242 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 2 )

[node name="Level" type="Label" parent="Levels/Level8/Level8"]
margin_left = -146.781
margin_top = -562.472
margin_right = 144.219
margin_bottom = 437.528
custom_fonts/font = SubResource( 2 )
text = "8"

[node name="Stars" type="Sprite" parent="Levels/Level8/Level8"]
visible = false
position = Vector2( 1.47385, 402.737 )
scale = Vector2( 1.41988, 1.60734 )
texture = ExtResource( 4 )

[node name="Level9" type="Area2D" parent="Levels"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Levels/Level9"]
position = Vector2( 468, 733 )
shape = SubResource( 10 )

[node name="Level9" type="Sprite" parent="Levels/Level9"]
editor/display_folded = true
position = Vector2( 468.084, 733.528 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Level" type="Label" parent="Levels/Level9/Level9"]
margin_left = -82.0095
margin_top = -664.256
margin_right = 168.991
margin_bottom = 335.744
custom_fonts/font = SubResource( 2 )
text = "9"

[node name="Stars" type="Sprite" parent="Levels/Level9/Level9"]
visible = false
position = Vector2( 1.47385, 402.737 )
scale = Vector2( 1.41988, 1.60734 )
texture = ExtResource( 4 )

[node name="LeaderBoardArea" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( -253.516, -90.9998 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeaderBoardArea"]
position = Vector2( 479, 1034 )
shape = SubResource( 11 )

[node name="LeaderBoard" type="Sprite" parent="LeaderBoardArea"]
position = Vector2( 479.605, 1034.81 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="HomeArea" type="Area2D" parent="."]
position = Vector2( 256.831, -91.2369 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HomeArea"]
position = Vector2( 106, 1035 )
shape = SubResource( 12 )

[node name="Home" type="Sprite" parent="HomeArea"]
position = Vector2( 106.842, 1035.73 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 6 )
[connection signal="input_event" from="Levels/Level1" to="." method="_on_Level1_input_event"]
[connection signal="input_event" from="Levels/Level2" to="." method="_on_Level2_input_event"]
[connection signal="input_event" from="Levels/Level3" to="." method="_on_Level3_input_event"]
[connection signal="input_event" from="Levels/Level4" to="." method="_on_Level4_input_event"]
[connection signal="input_event" from="Levels/Level5" to="." method="_on_Level5_input_event"]
[connection signal="input_event" from="Levels/Level6" to="." method="_on_Level6_input_event"]
[connection signal="input_event" from="Levels/Level7" to="." method="_on_Level7_input_event"]
[connection signal="input_event" from="Levels/Level8" to="." method="_on_Level8_input_event"]
[connection signal="input_event" from="Levels/Level9" to="." method="_on_Level9_input_event"]
[connection signal="input_event" from="LeaderBoardArea" to="." method="_on_LeaderBoardArea_input_event"]
[connection signal="input_event" from="HomeArea" to="." method="_on_HomeArea_input_event"]
